# Geofence

./: CMakeLists.txt  README.md  main.cpp
yourcode/: RTree.h  global.cpp  global.h  submit-1AddPolygonBeforeQueryPoint.cpp  submit-1AddPolygonBeforeQueryPoint.h  submit-2AddPointBeforeQueryPolygon.cpp  submit-2AddPointBeforeQueryPolygon.h  submit-3AddBeforeQuery.cpp  submit-3AddBeforeQuery.h  submit-4MixQueryPoint.cpp  submit-4MixQueryPoint.h  submit-5MixQueryPolygon.cpp  submit-5MixQueryPolygon.h  submit-6MixQuery.cpp  submit-6MixQuery.h
